// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders popup modal body for concern suggestion 1`] = `
<div
  className="acceptModalBody"
>
  <div
    className="acceptModalTitle"
  >
    Add as active or inactive concern?
  </div>
  <div
    className="acceptModalDropdown"
  >
    <select
      className="select"
      disabled={undefined}
      name="concernType"
      onChange={[Function]}
      required={undefined}
      value="active"
    >
      <option
        disabled={true}
        value=""
      >
        Select a concern type
      </option>
      <option
        disabled={undefined}
        value="active"
      >
        Active concern
      </option>
      <option
        disabled={undefined}
        value="inactive"
      >
        Inactive concern
      </option>
    </select>
  </div>
  <div
    className="acceptModalButtons"
  >
    <button
      className="button small"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="flex"
      >
        <span>
          Cancel
        </span>
      </span>
    </button>
    <button
      className="button small"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="flex"
      >
        <span />
      </span>
    </button>
    &gt;
  </div>
</div>
`;

exports[`renders popup modal body for goal suggestion 1`] = `
<div
  className="acceptModalBody"
>
  <div
    className="acceptModalTitle noMargin"
  >
    Add this goal to a concern
  </div>
  <div
    className="acceptModalSubtitle"
  >
    Select an existing patient concern, a suggested concern, or create a new one
  </div>
  <div
    className="acceptModalDropdown"
  >
    <select
      className="select"
      disabled={undefined}
      name="concernId"
      onChange={[Function]}
      required={undefined}
      value="concern-id"
    >
      <option
        disabled={true}
        value=""
      >
        Select a concern
      </option>
      <optgroup
        label="Suggested concerns"
      >
        <option
          value="concern-id"
        >
          Concern Title
        </option>
      </optgroup>
      <optgroup
        label="All other concerns"
      >
        <option
          value="concern-id"
        >
          Concern Title
        </option>
      </optgroup>
    </select>
  </div>
  <div
    className="acceptModalInput"
  >
    <select
      className="select"
      disabled={undefined}
      name="concernType"
      onChange={[Function]}
      required={undefined}
      value="active"
    >
      <option
        disabled={true}
        value=""
      >
        Select a concern type
      </option>
      <option
        disabled={undefined}
        value="active"
      >
        Active concern
      </option>
      <option
        disabled={undefined}
        value="inactive"
      >
        Inactive concern
      </option>
    </select>
  </div>
  <div
    className="acceptModalButtons"
  >
    <button
      className="button white"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="flex"
      >
        <span>
          Cancel
        </span>
      </span>
    </button>
    <button
      className="button"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="flex"
      >
        <span>
          Add to care plan
        </span>
      </span>
    </button>
  </div>
</div>
`;
